<resources>
    <string name="app_name">Registration Form</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_login1">Already have an account?</string>
    <string name="account_login2">&#160;Login Here!</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="account_register1">Dont have an account?</string>
    <string name="account_register2">&#160;Sign Up!</string>
</resources>